--- a/roles/phpstorm/templates/jetbrains-phpstorm.desktop.j2
+++ b/roles/phpstorm/templates/jetbrains-phpstorm.desktop.j2
@@ -2,8 +2,8 @@
 Version=1.0
 Type=Application
 Name=PhpStorm
-Icon=/opt/phpstorm/PhpStorm-192.6262.66/bin/phpstorm.svg
-Exec="/opt/phpstorm/PhpStorm-192.6262.66/bin/phpstorm.sh" %f
+Icon={{ phpstorm_path }}/{{ phpstorm_version }}/bin/phpstorm.svg
+Exec="{{ phpstorm_path }}/{{ phpstorm_version }}/bin/phpstorm.sh" %f
 Comment=Lightning-smart PHP IDE
 Categories=Development;IDE;
 Terminal=false
