ECPHP-102: Allow overrides

--- a/roles/app/templates/app.conf.j2
+++ b/roles/app/templates/app.conf.j2
@@ -7,6 +7,7 @@ Listen 8092
     DirectoryIndex index.html index.php
     <Directory "{{ home_directory }}/projects/app/backend/app/public">
         Require all granted
+        AllowOverride all
     </Directory>
     <FilesMatch \.php$>
         SetHandler "proxy:fcgi://127.0.0.1:{{ php_fpm_port }}"
@@ -18,5 +19,6 @@ Listen 8092
     DocumentRoot "{{ home_directory }}/projects/app/frontend/app/public"
     <Directory "{{ home_directory }}/projects/app/frontend/app/public">
         Require all granted
+        AllowOverride all
     </Directory>
 </VirtualHost>
